Cleaned up compiler and deprecation warnings